# pkpass

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  VERSION  brewrequirements.txt  example_pkpassrc  list_pip_requirements.sh  pkpass.py  requirements.txt  setup.cfg  setup.py  setup.sh  sonar-project.properties  tox.ini
.github/workflows/: codeql-analysis.yml  pythonpackage.yml  pythonpublish.yml  readthedocs.yml  unittests.yml
docs/: generate_commands.sh
docs/source/: Alternate Backend Support.rst  Commands.rst  Configuration.rst  Development And Testing.rst  General Usage.rst  Python2.rst  README.md  Setup.rst  conf.py  index.rst
githooks/: README.md  pre-commit
libpkpass/: README.md  __init__.py  _version.py  crypto.py  errors.py  escrow.py  identities.py  password.py  passworddb.py  util.py  validate.py
libpkpass/commands/: arguments.py  card.py  cli.py  clip.py  command.py  create.py  delete.py  distribute.py  export.py  fileimport.py  generate.py  info.py  interpreter.py  list.py  listrecipients.py  modify.py  pkinterface.py  populate.py  recover.py  rename.py  show.py  update.py  verifyinstall.py
libpkpass/connectors/: connectorinterface.py
libpkpass/models/: cert.py  recipient.py
test/: .test_config  test_create.py  test_crypto.py  test_delete.py  test_distribute.py  test_escrow.py  test_generate.py  test_id.py  test_info.py  test_list.py  test_list_recipients.py  test_modify.py  test_noop.py  test_password.py  test_passworddb.py  test_rename.py  test_show.py  test_update.py
(+7 files in other folders)
