[metadata]
name = pkpass
author = Noah Ginsburg
author_email = ginsburgnm@gmail.com
url = https://github.com/olcf/pkpass
description = Public Key based Password Management
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLV3
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    LICENSE :: OSI Approved :: GNU GENERAL PUBLIC LICENSE V3 (GPLV3)
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Security :: Cryptography

[options]
include_package_data = True
allow-all-external = yes
trusted-host =
    gitlab.*
    bitbucket.org
    github.com
packages = find:
scripts =
    bin/pkpass

[options.packages.find]
exclude =
    tests
